--- a/LMS-UI/src/app/common/header/header.component.html
+++ b/LMS-UI/src/app/common/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggler bg-white m-2 shadow-sm p-3 " style="width: 100%;" >
+<nav class="navbar navbar-toggler bg-white m-2 shadow-sm p-3 "  >
     <a class="navbar-brand px-3 text-primary" href="#">RD Edu.LMS</a>
     <div class="ml-auto d-flex align-items-center">
       <form class="form-inline d-none d-md-block">
