--- a/LMS-UI/src/app/component/student-component/student-analytics/student-analytics.component.css
+++ b/LMS-UI/src/app/component/student-component/student-analytics/student-analytics.component.css
@@ -1,4 +1,4 @@
-.card-body p {
-    font-size: 16px;
-  }
-  
+#student-analytics-chart {
+  width: 100%;
+  height: 300px; /* Adjust based on your layout */
+}
